hyper links are add, one is pending (Reserva Una Cita)

--- a/comments.html
+++ b/comments.html
@@ -117,8 +117,10 @@
                     <i class="fa-solid fa-circle-arrow-right"></i></span>
             </div>
             <div class="testimonios_footer">
-                <span>ESCRIBE UN COMENTARIO</span>
-                <span>MÁS INFORMACIÓN</span>
+                <a href="https://www.google.com/search?hl=en-IN&gl=in&q=Clinica+Familiar+ProHealth+Studio+-+Frisco,+4645+Wyndham+Ln+%23230,+Frisco,+TX+75033,+United+States&ludocid=2040406584034733941&lsig=AB86z5UNnQyElWv0dfI6G2ScBlWq#lrd=0x864c39f005796353:0x1c50fafa46c22f75,3"
+                    target="_blank"><span>ESCRIBE UN COMENTARIO</span></a>
+                <a href="https://www.google.com/search?hl=en-IN&gl=in&q=Clinica+Familiar+ProHealth+Studio+-+Frisco,+4645+Wyndham+Ln+%23230,+Frisco,+TX+75033,+United+States&ludocid=2040406584034733941&lsig=AB86z5UNnQyElWv0dfI6G2ScBlWq#lrd=0x864c39f005796353:0x1c50fafa46c22f75,1"
+                    target="_blank"><span>MÁS INFORMACIÓN</span></a>
             </div>
         </div>
     </section>
