--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                     </div>
                     <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul01"
                         style="display: none;">
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#comments" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Testimonios
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#gallery" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Galeria
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
@@ -49,22 +49,23 @@
                     </ul>
                     <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul02"
                         style="display: none;">
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#comments" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Testimonios
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#gallery" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Galeria
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="https://www.google.com/maps/dir//Clinica+Familiar+ProHealth+Studio+-+Frisco/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c39f005796353:0x1c50fafa46c22f75!2m2!1d-96.84732819999999!2d33.1617672"
+                            target="_blank" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Cómo Llegar
                             </li>
@@ -72,27 +73,28 @@
                     </ul>
                     <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul03"
                         style="display: none;">
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#comments" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Testimonios
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#gallery" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Galeria
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="tel:+1-469-473-4120" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Llamar Ahora
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="https://www.google.com/maps/dir//Clinica+Familiar+ProHealth+Studio+-+Frisco/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c39f005796353:0x1c50fafa46c22f75!2m2!1d-96.84732819999999!2d33.1617672"
+                            target="_blank" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Cómo Llegar
                             </li>
@@ -100,17 +102,17 @@
                     </ul>
                     <ul id="header_menu-main-menu" class="header_main-menu_ul header_main-menu_ul04"
                         style="display: none;">
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#comments" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Testimonios
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#gallery" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Galeria
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="#localmap" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Contacto
                             </li>
@@ -120,12 +122,13 @@
                                 Reserva Una Cita
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="tel:+1-469-473-4120" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Llamar Ahora
                             </li>
                         </a>
-                        <a href="" class="header_main-menu_ul-li-a">
+                        <a href="https://www.google.com/maps/dir//Clinica+Familiar+ProHealth+Studio+-+Frisco/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c39f005796353:0x1c50fafa46c22f75!2m2!1d-96.84732819999999!2d33.1617672"
+                            target="_blank" class="header_main-menu_ul-li-a">
                             <li class="header_main-menu_ul-li">
                                 Cómo Llegar
                             </li>
@@ -135,34 +138,47 @@
                 <p>Clinica Familiar ProHealth Studio</p>
             </div>
             <div class="header_rightside header_rightside01">
-                <span>
-                    <i class="fa-solid fa-calendar-day"></i>
-                    <p>Reserva Una Cita</p>
-                </span>
-                <span>
-                    <i class="fa-solid fa-phone"></i>
-                    <p>Llamar Ahora</p>
-                </span>
-                <span>
-                    <i class="fa-solid fa-diamond-turn-right"></i>
-                    <p>Cómo Llegar</p>
-                </span>
+                <a href="">
+                    <span>
+                        <i class="fa-solid fa-calendar-day"></i>
+                        <p>Reserva Una Cita</p>
+                    </span>
+                </a>
+                <a href="tel:+1-469-473-4120">
+                    <span>
+                        <i class="fa-solid fa-phone"></i>
+                        <p>Llamar Ahora</p>
+                    </span>
+                </a>
+                <a href="https://www.google.com/maps/dir//Clinica+Familiar+ProHealth+Studio+-+Frisco/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c39f005796353:0x1c50fafa46c22f75!2m2!1d-96.84732819999999!2d33.1617672"
+                    target="_blank" class="header_main-menu_ul-li-a">
+                    <span>
+                        <i class="fa-solid fa-diamond-turn-right"></i>
+                        <p>Cómo Llegar</p>
+                    </span>
+                </a>
             </div>
             <div class="header_rightside header_rightside02" style="display: none;">
-                <span>
-                    <i class="fa-solid fa-calendar-day"></i>
-                    <p>Reserva Una Cita</p>
-                </span>
-                <span>
-                    <i class="fa-solid fa-phone"></i>
-                    <p>Llamar Ahora</p>
-                </span>
+                <a href="">
+                    <span>
+                        <i class="fa-solid fa-calendar-day"></i>
+                        <p>Reserva Una Cita</p>
+                    </span>
+                </a>
+                <a href="tel:+1-469-473-4120">
+                    <span>
+                        <i class="fa-solid fa-phone"></i>
+                        <p>Llamar Ahora</p>
+                    </span>
+                </a>
             </div>
             <div class="header_rightside header_rightside03" style="display: none;">
-                <span>
-                    <i class="fa-solid fa-calendar-day"></i>
-                    <p>Reserva Una Cita</p>
-                </span>
+                <a href="">
+                    <span>
+                        <i class="fa-solid fa-calendar-day"></i>
+                        <p>Reserva Una Cita</p>
+                    </span>
+                </a>
             </div>
             <div class="header_rightside header_rightside04" style="display: none; gap:0px; padding: 0px;">
             </div>
@@ -187,6 +203,7 @@
         <div class="logo_poster_div box">
             <img src="poster08-02-2024(2).png" alt="logo_poster" class="logo_poster_img box">
         </div>
+        <div id="comments"></div>
     </section>
     <iframe src="comments.html" frameborder="0" width="100%" height="400px"></iframe>
     <section class="galeria">
@@ -195,6 +212,7 @@
                 <b>______</b>
                 <span>GALERÍA</span>
             </div>
+            <div id="gallery"></div>
             <div class="galeria_images box">
                 <img src="image01.jpg" alt="image1" class="photo01 photos">
                 <img src="image02.jpg" alt="image1" class="photo02 photos">
@@ -219,6 +237,8 @@
                 <span class="photo08_button photos_button"></span>
                 <span class="photo09_button photos_button"></span>
             </div>
+            <a href="https://www.google.com/maps/uv?pb=!1s0x864c39f005796353%3A0x1c50fafa46c22f75!3m1!7e131!4s!5sClinica%20Familiar%20ProHealth%20Studio%20-%20Frisco!15sCgIgAQ&hl=es-419&imagekey=!1e2!2snBbS2kpyDQ70okNSSE1fAg"
+                target="_blank" style="text-decoration: underline;"><b>MÁS GALERÍA</b></a>
         </div>
     </section>
     <section class="comunicate">
@@ -227,6 +247,7 @@
                 <b>______</b>
                 <span>COMUNÍCATE CON NOSOTROS</span>
             </div>
+            <div id="localmap"></div>
             <div class="comunicate_map box">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3339.9922505148693!2d-96.8474852!3d33.1618303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c39f005796353%3A0x1c50fafa46c22f75!2sClinica%20Familiar%20ProHealth%20Studio%20-%20Frisco!5e0!3m2!1sen!2sin!4v1709830717162!5m2!1sen!2sin"
@@ -240,14 +261,16 @@
             <div class="contacto_contacto contacto_section">
                 <p class="contacto_header">Contacto</p>
                 <input type="submit" value="LLAMAR AHORA" class="contacto_button">
-                <p>(469) 473-4120 <span>Frisco</span></p>
-                <p>(469)-543-0630 <span>Plano</span></p>
+                <a href="tel:+1-469-473-4120" class="contacto_atag">(469) 473-4120 <span>Frisco</span></a>
+                <a href="tel:+1-469-543-0630" class="contacto_atag">(469)-543-0630 <span>Plano</span></a>
             </div>
             <div class="contacto_dirección contacto_section">
                 <p class="contacto_header">Dirección</p>
                 <input type="submit" value="CÓMO LLEGAR" class="contacto_button">
-                <p>4645 Wyndham Lane Ste 230 Frisco, TX 75033.</p>
-                <p>6853 Coit Rd, Ste 300, Plano, TX 75024.</p>
+                <a href="https://www.google.com/maps?ll=33.161922,-96.847497&z=16&t=m&hl=en&gl=IN&mapclient=embed&q=4645+Wyndham+Ln+%23230+Frisco,+TX+75033+USA"
+                    target="_blank" class="contacto_atag">4645 Wyndham Lane Ste 230 Frisco, TX 75033.</a>
+                <a href="https://www.google.com/maps/place/6853+Coit+Rd+STE+300,+Plano,+TX+75024,+USA/@33.069427,-96.772362,16z/data=!4m6!3m5!1s0x864c22c98a66912d:0xb17c87d97829c690!8m2!3d33.0694028!4d-96.7723473!16s%2Fg%2F11hbw2210t?hl=en&entry=ttu"
+                    target="_blank" class="contacto_atag">6853 Coit Rd, Ste 300, Plano, TX 75024.</a>
             </div>
             <div class="contacto_horario  contacto_section">
                 <p class="contacto_header">Horario de atención</p>
@@ -289,8 +312,11 @@
             <hr>
             <div class="footer_text">
                 <span>Denunciar abuso</span>
-                <span>Foto del encabezado de Clinica Hispana ProHealth Studio - Frisco</span>
-                <span>Con tecnología de ShushankTech</span>
+                <a href="https://www.google.com/maps/contrib/108048068124310545388/photos/@33.1618303,-96.8474852,17z/data=!3m1!4b1!4m3!8m2!3m1!1e1?entry=ttu"
+                    target="_blank" style="color: gray;"><span>Foto
+                        del encabezado de Clinica Hispana ProHealth Studio - Frisco</span></a>
+                <a href="https://shushanktech.netlify.app/" target="_blank" style="color: gray;"><span>Con tecnología
+                        de ShushankTech</span></a>
             </div>
         </div>
     </footer>
