add Translate button and JS code for translate English to Spanish and Spanish to English

--- a/comments.html
+++ b/comments.html
@@ -25,28 +25,41 @@
         <div class="testimonios_box box">
             <div class="testimonios_header">
                 <b>______</b>
-                <span>TESTIMONIOS</span>
+                <span>
+                    <span class="spanish_language">TESTIMONIOS</span>
+                    <span class="english_language">TESTIMONIALS</span>
+                </span>
             </div>
             <div class="testimonios_comments_parent box">
                 <div class="testimonios_comments testimonios_comments1">
-                    <div>"The 3D/4D ultrasound has been the neatest and best experience of my pregnancy...and really
-                        life
-                        thus far. I shopped
-                        around for price, and this facility had the best, but quality and service were NOT skimped. In
-                        fact,
-                        after the
-                        ultrasound, the time Helena spent with us, and what we got, my husband was literally shocked
-                        that
-                        the price was so
-                        good!! He thought there was a mistake, but no! This place is just the best deal with the best
-                        service, and we got
-                        phenomenal photos and videos, even at 24 weeks! Helena was SO nice, helpful, and answered all of
-                        our
-                        questions. This
-                        ultrasound was longer, more thorough, more reassuring, and more helpful than even my anatomy
-                        scan. I
-                        will recommend it
-                        to everyone!!!"</div>
+                    <div>
+                        <span class="spanish_language">"The 3D/4D ultrasound has been the neatest and best experience of
+                            my pregnancy...and really life thus far. I shopped
+                            around for price, and this facility had the best, but quality and service were NOT skimped.
+                            In fact, after the
+                            ultrasound, the time Helena spent with us, and what we got, my husband was literally shocked
+                            that the price was so
+                            good!! He thought there was a mistake, but no! This place is just the best deal with the
+                            best service, and we got
+                            phenomenal photos and videos, even at 24 weeks! Helena was SO nice, helpful, and answered
+                            all of our questions. This
+                            ultrasound was longer, more thorough, more reassuring, and more helpful than even my anatomy
+                            scan. I will recommend it
+                            to everyone!!!"</span>
+                        <span class="english_language">"The 3D/4D ultrasound has been the neatest and best experience of
+                            my pregnancy... and really life thus far. I shopped
+                            around for price, and this facility had the best, but quality and service were NOT skimped.
+                            In fact, after the
+                            ultrasound, the time Helena spent with us, and what we got, my husband was literally shocked
+                            that the price was so
+                            Good!! He thought there was a mistake, but no! This place is just the best deal with the
+                            Best service, and we got
+                            phenomenal photos and videos, even at 24 weeks! Helena was SO nice, helpful, and answered
+                            all of Our questions. This
+                            ultrasound was longer, more thorough, more reassuring, and more helpful than even my anatomy
+                            Scan. I will recommend it
+                            to everyone!!!"</span>
+                    </div>
                     <div class="testimonios_comments_name">- Laura M</div>
                     <div class="testimonios_comments_rating">
                         <span class="testimonios_comments_rating_year">
@@ -63,15 +76,26 @@
                     </div>
                 </div>
                 <div class="testimonios_comments testimonios_comments2">
-                    <div>"Great costumer service, reception, and treatment. Dr. Helena is awesome! Loved my experience
-                        there. It was my first
-                        prenatal and best ultrasound of all; unfortunately it was the only one I did with her because I
-                        don’t live in the area.
-                        She took time to show my baby around with no hurry. She was the one giving us sweet the news we
-                        were having a baby girl.
-                        Explained and discussed things with us as much she was was able to. And the super modern
-                        ultrasound equipment is so cool
-                        and worth it. F.S."</div>
+                    <div>
+                        <span class="spanish_language">"Great costumer service, reception, and treatment. Dr. Helena is
+                            awesome! Loved my experience there. It was my first
+                            prenatal and best ultrasound of all; unfortunately it was the only one I did with her
+                            because I don’t live in the area.
+                            She took time to show my baby around with no hurry. She was the one giving us sweet the news
+                            we were having a baby girl.
+                            Explained and discussed things with us as much she was was able to. And the super modern
+                            ultrasound equipment is so cool
+                            and worth it. F.S."</span>
+                        <span class="english_language">"Great costumer service, reception, and treatment. Dr. Helena is
+                            awesome! Loved my experience there. It was my first
+                            prenatal and best ultrasound of all; unfortunately it was the only one I did with her
+                            because I don't live in the area.
+                            She took time to show my baby around with no hurry. She was the one giving us sweet the news
+                            we were having a baby girl.
+                            Explained and discussed things with us as much she was able to. And the super modern
+                            Ultrasound Equipment is so cool and
+                            worth it. F.S."</span>
+                    </div>
                     <div class="testimonios_comments_name">- Mila S</div>
                     <div class="testimonios_comments_rating">
                         <span class="testimonios_comments_rating_year">
@@ -88,12 +112,20 @@
                     </div>
                 </div>
                 <div class="testimonios_comments testimonios_comments3">
-                    <div>"I had an excellent experience at Dr. Helena’s office, from scheduling to consultation.
-                        Everyone was very courteous and
-                        knowledgeable. The overall atmosphere of the clinic is friendly and my family and I were treated
-                        very kindly. Dr.
-                        Helena’s bedside manner is outstanding and she’s always available to answer questions, even
-                        after the visit."</div>
+                    <div>
+                        <span class="spanish_language">"I had an excellent experience at Dr. Helena’s office, from
+                            scheduling to consultation. Everyone was very courteous and
+                            knowledgeable. The overall atmosphere of the clinic is friendly and my family and I were
+                            treated very kindly. Dr.
+                            Helena’s bedside manner is outstanding and she’s always available to answer questions, even
+                            after the visit."</span>
+                        <span class="english_language">"I had an excellent experience at Dr. Helena's office, from
+                            scheduling to consultation. Everyone was very courteous and
+                            knowledgeable. The overall atmosphere of the clinic is friendly and my family and I were
+                            treated very kindly. Dr.
+                            Helena's bedside manner is outstanding and she's always available to answer questions, even
+                            after the visit."</span>
+                    </div>
                     <div class="testimonios_comments_name">- Gabriela M</div>
                     <div class="testimonios_comments_rating">
                         <span class="testimonios_comments_rating_year">
@@ -118,9 +150,19 @@
             </div>
             <div class="testimonios_footer">
                 <a href="https://www.google.com/search?hl=en-IN&gl=in&q=Clinica+Familiar+ProHealth+Studio+-+Frisco,+4645+Wyndham+Ln+%23230,+Frisco,+TX+75033,+United+States&ludocid=2040406584034733941&lsig=AB86z5UNnQyElWv0dfI6G2ScBlWq#lrd=0x864c39f005796353:0x1c50fafa46c22f75,3"
-                    target="_blank"><span>ESCRIBE UN COMENTARIO</span></a>
+                    target="_blank">
+                    <span>
+                        <span class="spanish_language">ESCRIBE UN COMENTARIO</span>
+                        <span class="english_language">WRITE A COMMENT</span>
+                    </span>
+                </a>
                 <a href="https://www.google.com/search?hl=en-IN&gl=in&q=Clinica+Familiar+ProHealth+Studio+-+Frisco,+4645+Wyndham+Ln+%23230,+Frisco,+TX+75033,+United+States&ludocid=2040406584034733941&lsig=AB86z5UNnQyElWv0dfI6G2ScBlWq#lrd=0x864c39f005796353:0x1c50fafa46c22f75,1"
-                    target="_blank"><span>MÁS INFORMACIÓN</span></a>
+                    target="_blank">
+                    <span>
+                        <span class="spanish_language">MÁS INFORMACIÓN</span>
+                        <span class="english_language">MORE INFORMATION</span>
+                    </span>
+                </a>
             </div>
         </div>
     </section>
