--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProHealth Studio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo_url.jpg" type="image/jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,9 +23,38 @@
 
 <body>
     <header class="header">
-        <div class="header_box box">
+        <div class="header_box_top">
+            <div class="header_box box">
+                <div class="header_address_phone header_address_phone01 active">
+                    <a href="https://www.google.com/maps?ll=33.161922,-96.847497&z=16&t=m&hl=en&gl=IN&mapclient=embed&q=4645+Wyndham+Ln+%23230+Frisco,+TX+75033+USA"
+                        target="_blank" class="header_address header_address01 scroll-down-animation"><img
+                            src="placeholder.svg" alt=""><span>4645 Wyndham Lane Ste 230 Frisco, TX
+                            75033</span></a>
+                    <a href="tel:+1-469-473-4120" class="header_number header_number01 scroll-down-animation"><img
+                            src="phone-contact.svg" alt=""><span>+1 (469) 473-4120</span></a>
+                </div>
+                <div class="header_address_phone header_address_phone02">
+                    <a href="https://www.google.com/maps/place/6853+Coit+Rd+STE+300,+Plano,+TX+75024,+USA/@33.069427,-96.772362,16z/data=!4m6!3m5!1s0x864c22c98a66912d:0xb17c87d97829c690!8m2!3d33.0694028!4d-96.7723473!16s%2Fg%2F11hbw2210t?hl=en&entry=ttu"
+                        target="_blank" class="header_address header_address02 scroll-down-animation"><img
+                            src="placeholder.svg" alt=""><span>6853 Coit Road, Ste 300, Plano, Texas
+                            75024</span></a>
+                    <a href="tel:+1-469-543-0630" class="header_number header_number02 scroll-down-animation"><img
+                            src="phone-contact.svg" alt=""><span>+1 (469) 543 0630</span></a>
+                </div>
+                <ul class="social-links social-links-top" style="margin:0px;">
+                    <li><a href="https://www.facebook.com/prohealthstudio1?mibextid=LQQJ4d" target="_blank"><i
+                                class="fa-brands fa-facebook" style="color:#fff;"></i></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/prohealthstudio1?igsh=MTFvYmtrODE2cHk0aQ=="
+                            target="_blank"><i class="fa-brands fa-instagram" style="color:#fff;"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="header_box box header_box_bottom">
             <div class="header_leftside">
-                <div class="header_main-menu">
+                <div class="header_main-menu" style="display: none;">
                     <div class="menuclosebtn">
                         <i class="fa-solid fa-bars menu_btn" id="menubtn"></i>
                         <span class="close_btn" style="display: none;" id="closebtn">X</span>
@@ -150,12 +180,13 @@
                         </a> -->
                     </ul>
                 </div>
-                <p>
+                <img src="logo18032024.png" alt="logo" class="header_logo">
+                <!-- <p>
                     <span class="spanish_language">Clinica Familiar ProHealth Studio</span>
                     <span class="english_language">ProHealth Studio Family Clinic</span>
-                </p>
+                </p> -->
             </div>
-            <div class="header_rightside header_rightside01">
+            <div class="header_rightside header_rightside01" style="display: none;">
                 <a href="">
                     <span class="header_rightside_span">
                         <i class="fa-solid fa-calendar-day"></i>
@@ -234,11 +265,12 @@
                             <span style="color: lightgray;">Span</span> <i class="fa-solid fa-toggle-on"></i> Eng</span> -->
 
 
-                        <span class="spanish_language">ESP <i class="fa-solid fa-toggle-off"></i> <span
-                                style="color: lightgray;">ENG</span>
+                        <span class="spanish_language">Spanish <i class="fa-solid fa-toggle-off"></i> <span
+                                style="color: lightgray;">English</span>
                         </span>
                         <span class="english_language">
-                            <span style="color: lightgray;">ESP</span> <i class="fa-solid fa-toggle-on"></i> ENG</span>
+                            <span style="color: lightgray;">Spanish</span> <i class="fa-solid fa-toggle-on"></i>
+                            English</span>
 
                     </span>
                     <!-- <img src="language_translation.png" alt="lang_image"> -->
@@ -247,7 +279,7 @@
         </div>
     </header>
 
-    <section class="clinica">
+    <section class="clinica" style="display: none;">
         <div class="clinica_box box">
             <span class="clinica_header">
                 <span class="spanish_language">Clinica Familiar</span>
@@ -265,11 +297,151 @@
             <!-- <span class="clinica_text">Es la imagen del encabezado que se utilizará para el sitio</span> -->
         </div>
     </section>
-    <section class="logo_poster">
+    <section class="logo_poster" style="display: none;">
         <div class="logo_poster_div box">
             <img src="poster08-02-2024(2).png" alt="logo_poster" class="logo_poster_img box">
         </div>
         <div id="comments"></div>
+    </section>
+    <section class="more_services">
+        <div class="more_services_list box">
+            <span class="spanish_language">
+                <li>Ultrasounds,</li>
+            </span>
+            <span class="english_language">
+                <li>Ultrasonidos,</li>
+            </span>
+            <span class="spanish_language">
+                <li>Urgencias Menores,</li>
+            </span>
+            <span class="english_language">
+                <li>Minor Emergencies,</li>
+            </span>
+            <span class="spanish_language">
+                <li>Examen de Covid and</li>
+            </span>
+            <span class="english_language">
+                <li>Covid Test and</li>
+            </span>
+            <span class="spanish_language">
+                <li>No insurance? No worries! Quality healthcare is still within reach</li>
+            </span>
+            <span class="english_language">
+                <li>Sin seguro? No hay problema! La atención sanitaria de calidad todavía está
+                    a nuestro alcance</li>
+            </span>
+            <button class="spanish_language" id="open-appointment-spanish">RESERVAR UNA CITA</button>
+            <button class="english_language" id="open-appointment-english">BOOK AN APPOINTMENT</button>
+        </div>
+    </section>
+    <section class="appointment" style="display: none;">
+        <div class="appointment_div box">
+            <form class="appointment_form box" target="_self" action="https://formsubmit.co/rajanaresh.p@gmail.com"
+                method="POST" onsubmit="updateSubjectContactUs()">
+                <h1 class="spanish_language">RESERVAR UNA CITA</h1>
+                <h1 class="english_language">BOOK AN APPOINTMENT</h1>
+                <input type="hidden" name="_subject" id="subject" value="Connect with us - ">
+                <!-- <input type="hidden" name="_cc" value="srinivasvadde@gmail.com"> -->
+                <input type="hidden" name="_template" value="table">
+                <input type="hidden" name="_next" value="https://google.com">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="text" placeholder="booking_id" id="booking_id" name="booking_id" autocomplete="true"
+                    style="display: none;">
+
+                <label for="name">Appointment Location</label>
+                <select name="appointment_location" id="location" required>
+                    <option value="" disabled selected>--Select location--</option>
+                    <option value="Frisco">4645 Wyndham Lane Ste 230 Frisco, TX 75033</option>
+                    <option value="Plano">6853 Coit Road, Ste 300, Plano, Texas 75024</option>
+                </select>
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" autocomplete="true" required>
+                <label for="phoneNumber">Phone Number</label>
+                <input type="tel" id="phoneNumber" name="phone_number" autocomplete="true" required>
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" autocomplete="true" required>
+                <label for="textarea">Appointment Reason:</label>
+                <textarea rows="3" id="textarea" required></textarea>
+                <input type="text" placeholder="appointment_reason" id="appointment_reason" name="message"
+                    autocomplete="true" style="display: none;">
+                <button class="box_button contact_us_submit_button" type="submit">New submission!</button>
+            </form>
+        </div>
+        <div class="close-btn_div">
+            <span class="close-btn" onclick="closePopup()">×</span>
+        </div>
+    </section>
+    <section class="services">
+        <div class="services_header">
+            <b>______</b>
+            <span>
+                <span class="spanish_language">A Servicios</span>
+                <span class="english_language">To Services</span>
+            </span>
+        </div>
+        <div class="sevices_list box">
+            <ul class="spanish_language sevices_list_div sevices_list_div_gm" style="list-style-type: square;">
+                <h3>Medicina General</h3>
+                <li>Examen Físico</li>
+                <li>Urgencias Menores</li>
+                <li>Tratamientos de Alergias</li>
+                <li>Control de Diabetes/Alta Presión</li>
+                <li>Problemas de Impotencia</li>
+                <li>Extracción de Cuerpos Extraños</li>
+                <li>Sutura y Cura de Heridas</li>
+                <li>Tratamientos para Enfermedades de Transmision Sexual</li>
+                <li>Enfermedades Transmitidas</li>
+                <li>Planificación Familiar</li>
+                <li>Extracción de Uñas</li>
+                <li>Electrocardiograma</li>
+            </ul>
+            <ul class="english_language sevices_list_div sevices_list_div_gm" style="list-style-type: square;">
+                <h3>General Madicine</h3>
+                <li>Physical Exam</li>
+                <li>Minor Urgency</li>
+                <li>Allergy Treatment</li>
+                <li>Diabetes Control/ High Pressure</li>
+                <li>Impotence Problems</li>
+                <li>Extraction of Foreign Bodies</li>
+                <li>Suture and Wound Cure</li>
+                <li>Treatment for Sexually</li>
+                <li>Transmitted Diseases</li>
+                <li>Family Planning poor</li>
+                <li>Circulation Nail Removal</li>
+                <li>Electrocardiogram</li>
+            </ul>
+
+            <ul class="spanish_language sevices_list_div sevices_list_div_lt" style="list-style-type: square;">
+                <h3>Exámenes de Laboratorio</h3>
+                <li>Exámen General de Sangre </li>
+                <li>Exámen de Embarazo</li>
+                <li>Papanicolaou</li>
+                <li>Exámen Para Enfermedades de Transmisión Sexual</li>
+                <li>Exámen de Próstata</li>
+                <li>Estudio de Anemia</li>
+                <li>Estudio de Colesterol</li>
+                <li>Estudio de Hígado y Riñónes</li>
+                <li>Estudio para la Artritis</li>
+                <li>Exámen de Orina</li>
+                <li>Estudio de Tiroides</li>
+            </ul>
+
+            <ul class="english_language sevices_list_div sevices_list_div_lt" style="list-style-type: square;">
+                <h3>Laboratory Exams</h3>
+                <li>General Blood Test</li>
+                <li>Pregnancy Test</li>
+                <li>Pap Smear</li>
+                <li>Tests for Sexually Transmitted Diseases</li>
+                <li>Prostate Exam</li>
+                <li>Anemia Study</li>
+                <li>Cholesterol and Triglycerides Study</li>
+                <li>Liver and Kidney Study</li>
+                <li>Study for Arthritis</li>
+                <li>Urine Test</li>
+                <li>Thyroid Study</li>
+            </ul>
+        </div>
+
     </section>
     <iframe src="comments.html" frameborder="0" width="100%" height="330px"></iframe>
     <section class="galeria">
